packages/next-swc/crates/core/tests/errors/server-actions/9/input.js
import 'my-module'
;('use server')
